<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="398dp"
                android:layout_height="match_parent"
                android:paddingBottom="30dp">

                <EditText
                    android:id="@+id/etFechaNac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/strFechaNac"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCContraseñaR"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/etUsuarioR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:hint="@string/strUsuario"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNombreR" />

                <EditText
                    android:id="@+id/etNombreR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:hint="@string/strNombreC"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <ImageView
                    android:id="@+id/ivFoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="36dp"
                    android:maxWidth="150dp"
                    android:maxHeight="150dp"
                    android:onClick="seleccionarFoto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/etContraseñaR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:hint="@string/strContraseña"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etUsuarioR"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/etCContraseñaR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:hint="@string/strCContraseña"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etContraseñaR"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="114dp"
                    android:layout_marginTop="68dp"
                    android:text="@string/strSexo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etFechaNac" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="133dp"
                    android:layout_height="146dp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.647"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etFechaNac">

                    <RadioButton
                        android:id="@+id/rbHombreR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strH" />

                    <RadioButton
                        android:id="@+id/rbMujerR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strM" />

                    <RadioButton
                        android:id="@+id/rbOtroR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strO" />
                </RadioGroup>

                <Button
                    android:id="@+id/btCrear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="48dp"
                    android:onClick="crearCuenta"
                    android:text="@string/strCrearCuenta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="52dp"
                    android:minHeight="48dp"
                    android:onClick="intentIniciarSesion"
                    android:text="@string/strIniciarS"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="288dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="7dp"
                    android:text="Pulsa la imagen para cambiar tu foto de perfil"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>